[project]
name = "balatroplus-save-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.6.2",
    "fabric>=3.2.2",
    "slpp",
]

[tool.uv.sources]
slpp = { git = "https://github.com/SirAnthony/slpp" }
